[3.10] bpo-46433: _PyType_GetModuleByDef: handle static types in MRO (GH-30696) (GH-31262)

(cherry picked from commit 0ef08530124c5ca13a9394f4ac18bee8e6c66409)